--- a/www/index.html
+++ b/www/index.html
@@ -10,11 +10,23 @@
 <body ng-app="chart-demo" ng-controller="ChartCtrl">
 
 <div class="container">
-    <div class="row">
-        <div class="span6">
-            <highchart config="chartConfig" class="chart img-thumbnail"></highchart>
+    <div class="btn-control">
+        <div class="btn-group" role="group" aria-label="...">
+            <button type="button" class="btn btn-default" ng-click="stop();">stop</button>
+            <button type="button" class="btn btn-default" ng-click="restart();">restart</button>
+        </div>
+        <div class="btn-group" role="group" aria-label="...">
+            <button type="button" class="btn btn-default" ng-click="setInterval(100);">100ms</button>
+            <button type="button" class="btn btn-default" ng-click="setInterval(500);">500ms</button>
+            <button type="button" class="btn btn-default" ng-click="setInterval(1000);">1000ms</button>
+        </div>
+        <div class="btn-group" role="group" aria-label="...">
+            <button type="button" class="btn btn-default" ng-click="setMaxItemsCount(10);">10b</button>
+            <button type="button" class="btn btn-default" ng-click="setMaxItemsCount(20);">20b</button>
+            <button type="button" class="btn btn-default" ng-click="setMaxItemsCount(50);">50b</button>
         </div>
     </div>
+    <highchart config="chartConfig" class="chart img-responsive"></highchart>
 </div>
 
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
@@ -22,6 +34,7 @@
 <script src="bower_components/angular/angular.min.js"></script>
 <script src="bower_components/angular-route/angular-route.min.js"></script>
 <script src="bower_components/highcharts-ng/dist/highcharts-ng.min.js"></script>
+<script src="bower_components/lodash/dist/lodash.min.js"></script>
 
 <script src="js/angular-config.js"></script>
 <script src="js/services/chartConfigService.js"></script>
